--- a/css/style.css
+++ b/css/style.css
@@ -228,8 +228,18 @@ h1 {
   padding: 1rem;
 }
 .grid-col-item {
+  padding: 1em;
   height: 100%;
   margin-bottom: 2rem;
+  border-radius: 1em;
+  transition: all 0.3s ease-in-out;
+}
+.grid-col-item:hover {
+  transform: translateY(5px);
+  transform: scale(1.05);
+  border-radius: 1em;
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 50px 100px -20px,
+    rgba(255, 255, 255, 0.3) 0px 30px 60px -30px;
 }
 .icon {
   width: 100%;
