--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,18 @@ h1 {
   font-size: 15.5px;
 }
 
+.team {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.teamMem img {
+  border-radius: 1em;
+  object-fit: contain;
+}
+
 /* footer */
 
 footer {
@@ -307,16 +319,18 @@ footer {
 .contact-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-arounf;
+  justify-content: space-between;
   margin: 0 auto;
   padding: 20px;
-  position: relative;
+  /* position: relative; */
   max-width: 840px;
 }
 
 /* Left contact page */
 .form-horizontal {
-  float: left;
+  flex-basis: 50%;
+  padding-right: 1rem;
+  /* float: left; */
   max-width: 400px;
   font-family: 'Lato';
   font-weight: 400;
@@ -343,32 +357,36 @@ textarea {
 }
 
 .alt-send-button {
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   height: 35px;
   transition: all 0.2s ease-in-out;
 }
 
+.fa-paper-plane {
+  margin-top: 9px;
+}
 .send-text {
   display: block;
-  margin-top: 10px;
+  margin-top: 14px;
   font: 700 12px 'Lato', sans-serif;
   letter-spacing: 2px;
 }
 
 .alt-send-button:hover {
-  transform: translate3d(0px, -29px, 0px);
+  transform: translate3d(0px, -30px, 0px);
 }
 
 /* Begin Right Contact Page */
 .direct-contact-container {
+  flex-basis: 50%;
+  padding-left: 1rem;
   max-width: 400px;
-  margin-left: 30px;
 }
 
 /* Location, Phone, Email Section */
 .contact-list {
   list-style-type: none;
-
   padding-right: 20px;
 }
 
@@ -392,7 +410,7 @@ textarea {
 }
 
 .gmail {
-  margin-left: 53px;
+  margin-left: 50px;
 }
 
 .contact-text a {
@@ -423,10 +441,10 @@ textarea {
 .social-media-list li {
   position: relative;
   display: inline-block;
-  height: 60px;
-  width: 60px;
+  height: 3em;
+  width: 3em;
   margin: 10px 3px;
-  line-height: 60px;
+  line-height: 3em;
   border-radius: 50%;
   color: #fff;
   background-color: rgb(27, 27, 27);
@@ -439,9 +457,9 @@ textarea {
   position: absolute;
   top: 0;
   left: 0;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
+  height: 3em;
+  width: 3em;
+  line-height: 3em;
   border-radius: 50%;
   opacity: 0;
   box-shadow: 0 0 0 1px #fff;
