--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,10 @@
 
 /* ==== CSS VARIABLES ==== */
 :root {
+  /* --primary-color: #ffb05a;
+  --link-color: #eab933; */
   --primary-color: #eab933;
-  --link-color: #fffb00;
+  --link-color: #ffb05a;
   --btn-hover-color: #ebdf00;
   --lg-heading: #feffef;
   --text-content: #fffac0;
@@ -27,6 +29,7 @@
 body {
   width: 100%;
   height: 100vh;
+  cursor: pointer;
   overflow-x: hidden;
   background-color: #000000;
 }
@@ -146,6 +149,7 @@ h1 {
   color: var(--primary-color);
 }
 .info-text {
+  cursor: pointer;
   margin-top: 1.5rem;
   font-size: 19px;
   line-height: 28px;
@@ -212,6 +216,7 @@ h1 {
 .grid-item-2 {
   width: 100%;
   height: 100%;
+  cursor: pointer;
   border-radius: 1em;
   transition: all 0.5s ease-in-out;
 }
@@ -297,8 +302,8 @@ h1 {
 
 footer {
   width: 100%;
+  text-align: center;
   background-color: var(--primary-color);
-  height: 12px;
   margin-top: 8rem;
 }
 
@@ -320,17 +325,15 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 2rem;
   margin: 0 auto;
-  padding: 20px;
-  /* position: relative; */
+  position: relative;
   max-width: 840px;
 }
 
 /* Left contact page */
 .form-horizontal {
   flex-basis: 50%;
-  padding-right: 1rem;
-  /* float: left; */
   max-width: 400px;
   font-family: 'Lato';
   font-weight: 400;
@@ -374,20 +377,18 @@ textarea {
 }
 
 .alt-send-button:hover {
-  transform: translate3d(0px, -30px, 0px);
+  transform: translate3d(0px, -32px, 0px);
 }
 
 /* Begin Right Contact Page */
 .direct-contact-container {
   flex-basis: 50%;
-  padding-left: 1rem;
   max-width: 400px;
 }
 
 /* Location, Phone, Email Section */
 .contact-list {
   list-style-type: none;
-  padding-right: 20px;
 }
 
 .list-item {
@@ -402,15 +403,15 @@ textarea {
 }
 
 .place {
-  margin-left: 62px;
+  margin-left: 32px;
 }
 
 .phone {
-  margin-left: 56px;
+  margin-left: 26px;
 }
 
 .gmail {
-  margin-left: 50px;
+  margin-left: 20px;
 }
 
 .contact-text a {
@@ -507,13 +508,13 @@ hr {
     max-width: 300px;
   }
   .social-media-list li {
-    height: 60px;
-    width: 60px;
+    max-height: 60px;
+    max-width: 60px;
     line-height: 60px;
   }
   .social-media-list li:after {
-    width: 60px;
-    height: 60px;
+    max-height: 60px;
+    max-width: 60px;
     line-height: 60px;
   }
 }
@@ -532,7 +533,7 @@ hr {
   .name,
   .email,
   textarea {
-    width: 280px;
+    max-width: 280px;
   }
 
   .direct-contact-container {
@@ -543,14 +544,14 @@ hr {
     left: 0;
   }
   .social-media-list li {
-    height: 55px;
-    width: 55px;
+    max-height: 55px;
+    max-width: 55px;
     line-height: 55px;
-    font-size: 2rem;
+    font-size: 2em;
   }
   .social-media-list li:after {
-    width: 55px;
-    height: 55px;
+    max-height: 55px;
+    max-width: 55px;
     line-height: 55px;
   }
 }
