--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ h1 {
 
 footer {
   width: 100%;
+  height: 12px;
   text-align: center;
   background-color: var(--primary-color);
   margin-top: 8rem;
